add time to cases
